--- a/catalog_admin.html
+++ b/catalog_admin.html
@@ -49,7 +49,7 @@
         <div class="sub">Manage the product catalog that powers the Transfer Tracker.</div>
       </div>
       <div class="right">
-        <a class="btn" href="probakery_transfer.html" title="Back to tracker">Back to Tracker</a>
+        <a class="btn" href="index.html" title="Back to tracker">Back to Tracker</a>
         <span id="fb-status" class="status">Firebase: <em>checking…</em></span>
         <button id="login-btn" type="button" class="btn primary">Login</button>
       </div>
