--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="sub">Log transfers from <strong>Pro-Bakery</strong> to your locations, with product/units/prices driven by the catalog.</div>
       </div>
       <div>
-        <a class="btn admin-only" href="catalog_admin.html" style="margin-right:8px">Catalog Admin</a>
+        <a class="btn" href="catalog_admin.html" style="margin-right:8px">Catalog Admin</a>
         <span id="fb-status" class="status">Firebase: <em>checking…</em></span>
         <button id="login-btn" type="button" class="btn primary" style="margin-left:10px">Login</button>
       </div>
